syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_enum_with_variants.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub enum MyEnum {
    VariantA,
    VariantB(i32),
}
