syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_function.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
pub # [omnidoc (path = "docs")] fn hello () { println ! ("world") ; }
