syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_impl_block.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc]
impl MyStruct {
    pub fn method(&self) -> i32 {
        42
    }
}
