syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_module.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub mod submodule {
    pub fn inner_func() {}
}
