syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_struct_with_fields.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub struct MyStruct {
    pub field: i32,
    another: String,
}
