syncdoc-migrate/tests/snapshots/rewrite_integration__annotate_trait.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub trait MyTrait {
    fn required_method(&self);
    fn default_method(&self) {
        println!("default");
    }
}
