syncdoc-migrate/tests/snapshots/rewrite_integration__complex_mixed_file.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, true, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub mod calculations {
    pub fn add(a: i32, b: i32) -> i32 {
        a + b
    }
}
#[derive(Debug)]
#[syncdoc::omnidoc(path = "docs")]
#[derive(Debug)]
pub struct Calculator {
    value: i32,
}
#[syncdoc::omnidoc(path = "docs")]
impl Calculator {
    pub fn new() -> Self {
        Self { value: 0 }
    }
}
#[syncdoc::omnidoc(path = "docs")]
pub fn standalone() {}
