syncdoc-migrate/tests/snapshots/rewrite_integration__empty_enum_body.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, true, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub enum Empty {}
