syncdoc-migrate/tests/snapshots/rewrite_integration__empty_struct.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, false, true)"
---
#[syncdoc::omnidoc(path = "docs")]
pub struct EmptyStruct {}
