syncdoc-migrate/tests/snapshots/rewrite_integration__module_doc_comment_strip_and_annotate.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, true, true)"
---
#![doc = syncdoc::module_doc!(path = "docs")]


#[syncdoc::omnidoc(path = "docs")]
pub enum TimeOfDay {
    Day,
    Night,
}
