syncdoc-migrate/tests/snapshots/rewrite_integration__strip_and_annotate_function.snap
---
source: syncdoc-migrate/tests/rewrite_integration.rs
expression: "test_rewrite(source, true, true)"
---
#[syncdoc::omnidoc]
pub fn hello() {
    println!("world");
}
